@@ -53,6 +53,7 @@
 
 #include <math.h>
 #include <stdio.h>
+#include "cpr.h"
 
 //
 //=========================================================================
